fix: fix flickering on ios after event delegation

--- a/src/app.scss
+++ b/src/app.scss
@@ -1,50 +1,60 @@
 @import "./sass/searchBox";
 /* roboto-300 - latin */
 @font-face {
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 300;
-	src: url('fonts/roboto-v18-latin-300.eot'); /* IE9 Compat Modes */
-	src: local('Roboto Light'), local('Roboto-Light'),
-	url('fonts/roboto-v18-latin-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-	url('fonts/roboto-v18-latin-300.woff2') format('woff2'), /* Super Modern Browsers */
-	url('fonts/roboto-v18-latin-300.woff') format('woff'), /* Modern Browsers */
-	url('fonts/roboto-v18-latin-300.ttf') format('truetype') /* Safari, Android, iOS */
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 300;
+  src: url("fonts/roboto-v18-latin-300.eot"); /* IE9 Compat Modes */
+  src: local("Roboto Light"), local("Roboto-Light"),
+    url("fonts/roboto-v18-latin-300.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("fonts/roboto-v18-latin-300.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("fonts/roboto-v18-latin-300.woff")
+      format("woff"),
+    /* Modern Browsers */ url("fonts/roboto-v18-latin-300.ttf")
+      format("truetype"); /* Safari, Android, iOS */
 }
 /* roboto-regular - latin */
 @font-face {
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 400;
-	src: url('fonts/roboto-v18-latin-regular.eot'); /* IE9 Compat Modes */
-	src: local('Roboto'), local('Roboto-Regular'),
-	url('fonts/roboto-v18-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-	url('fonts/roboto-v18-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-	url('fonts/roboto-v18-latin-regular.woff') format('woff'), /* Modern Browsers */
-	url('fonts/roboto-v18-latin-regular.ttf') format('truetype') /* Safari, Android, iOS */
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("fonts/roboto-v18-latin-regular.eot"); /* IE9 Compat Modes */
+  src: local("Roboto"), local("Roboto-Regular"),
+    url("fonts/roboto-v18-latin-regular.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("fonts/roboto-v18-latin-regular.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("fonts/roboto-v18-latin-regular.woff")
+      format("woff"),
+    /* Modern Browsers */ url("fonts/roboto-v18-latin-regular.ttf")
+      format("truetype"); /* Safari, Android, iOS */
 }
 /* roboto-700 - latin */
 @font-face {
-	font-family: 'Roboto';
-	font-style: normal;
-	font-weight: 700;
-	src: url('fonts/roboto-v18-latin-700.eot'); /* IE9 Compat Modes */
-	src: local('Roboto Bold'), local('Roboto-Bold'),
-	url('fonts/roboto-v18-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-	url('fonts/roboto-v18-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-	url('fonts/roboto-v18-latin-700.woff') format('woff'), /* Modern Browsers */
-	url('fonts/roboto-v18-latin-700.ttf') format('truetype') /* Safari, Android, iOS */
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  src: url("fonts/roboto-v18-latin-700.eot"); /* IE9 Compat Modes */
+  src: local("Roboto Bold"), local("Roboto-Bold"),
+    url("fonts/roboto-v18-latin-700.eot?#iefix") format("embedded-opentype"),
+    /* IE6-IE8 */ url("fonts/roboto-v18-latin-700.woff2") format("woff2"),
+    /* Super Modern Browsers */ url("fonts/roboto-v18-latin-700.woff")
+      format("woff"),
+    /* Modern Browsers */ url("fonts/roboto-v18-latin-700.ttf")
+      format("truetype"); /* Safari, Android, iOS */
+}
+
+* {
+  -webkit-tap-highlight-color: transparent;
 }
 :root {
-	--clip-width: 400px;
+  --clip-width: 400px;
 }
 body {
-	margin: 0;
-	background-color: #D3D3D3;
+  margin: 0;
+  background-color: #d3d3d3;
 }
 
 h1 {
-	text-align: center;
-	font-family: "Roboto", sans-serif;
-	font-weight: 700;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: 700;
 }
